<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <!--<item-->
        <!--android:id="@+id/nav_home"-->
        <!--android:icon="@drawable/ic_menu_camera"-->
        <!--android:title="@string/drawer_home" />-->
        <item
            android:id="@+id/nav_profile"
            android:title="@string/drawer_profile" />
        <!--<item-->
            <!--android:id="@+id/nav_history"-->
            <!--android:title="@string/drawer_history" />-->
        <item
            android:id="@+id/nav_setting"
            android:title="@string/drawer_setting" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/drawer_logout" />
    </group>

    <!--<item android:title="User">-->
    <!--<menu>-->
    <!---->
    <!--</menu>-->
    <!--</item>-->

</menu>
