<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editprofile_fullname"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/inputFullname"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutPasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editprofile_passwd">

                <EditText
                    android:id="@+id/inputPasswd"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"

                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutRepasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editprofile_repasswd">

                <EditText
                    android:id="@+id/inputRepasswd"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"

                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
            <!--android:id="@+id/joystickinfo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/carmodify_joystickinfo" />-->

            <!--<android.support.v7.widget.SwitchCompat-->
            <!--android:id="@+id/joyswitch"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_toLeftOf="@+id/joystickinfo"-->
            <!--android:checked="false" />-->

            <!--</RelativeLayout>-->

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonstyle_round"
                android:text="@string/editprofile_btnvalue"
                android:textColor="@android:color/white" />


        </LinearLayout>


    </android.support.v7.widget.CardView>


</ScrollView>